--- a/core/core.tex
+++ b/core/core.tex
@@ -109,7 +109,7 @@
     \end{figure}%
 }
 
-\NewDocumentCommand{\insertPicture}{m m m m}{%
+\NewDocumentCommand{\insertPictureSimple}{m m m m}{%
     \begin{figure}[H]%
         \centering%
         \IfFileExists{\problemDirectory/#1}{%
