HTR Náboj chata monster pack

--- a/TODO
+++ b/TODO
@@ -10,3 +10,7 @@
 - Kam chceme písať footnote (pred vs za bodku)?
 - Chceme arabské alebo rímske číslice v ročníku?
 - Treba opakovať zadanie vo vzoráku (teraz KMS, FKS a UFO áno; KSP a Prask nie)
+
+
+# Náboj
+- spacing okolo \section{} je vidný
