--- a/core/core.tex
+++ b/core/core.tex
@@ -62,13 +62,14 @@
     group-separator         = {\,},
     group-minimum-digits    = 5,
     inter-unit-product      = {\kern 0.05em},               % veľmi tenká medzera medzi jednotkami
-    exponent-product        = \cdot,                        % \times pre 5×10^7, \cdot pre 5.1O^7    
+    exponent-product        = \times,                       % \times pre 5×10^7, \cdot pre 5.1O^7    
     number-unit-product     = {\ },                         % medzera medzi číslom a jednotkou
     output-decimal-marker   = {\text{,}},                   % v desatinných číslach chceme slovenskú čiarku
     range-units             = single,
-    range-phrase            = {\text{--}},                  % 5 -- 10 m/s
+    range-phrase            = {\text{ -- }},                  % 5 -- 10 m/s
     list-units              = single,                       %
     list-final-separator    = {\ a\ },                      % 5, 7 a 10 m/s
+    retain-explicit-plus    = true,                         % zachovávame explicitné +
 }
 
 %
