--- a/core/hacks.tex
+++ b/core/hacks.tex
@@ -21,6 +21,7 @@
 
 % Render percent sign with nice font, not ugly Computer modern
     \mathcode`\%="7025
+    \mathcode`\;="603B
 
 \makeatother
 
