--- a/modules/naboj/templates/answers.tex
+++ b/modules/naboj/templates/answers.tex
@@ -17,6 +17,7 @@
     \pagestyle{answers}
     (@ for modulo in volume.problemsMod @)
         \newpage%
+        \section{Modulo (* loop.index - 1 *)}
         (@ for problem in modulo @)%
             \setcounter{volume}{(* volume.number *)}%
             \setcounter{problem}{(* problem.number *)}%
