--- a/modules/naboj/templates/booklet.tex
+++ b/modules/naboj/templates/booklet.tex
@@ -10,9 +10,8 @@
  
 \begin{document}
     \pagestyle{main}
-    \thispagestyle{first}
-    \vspace*{2em}
 
+    \vspace*{-1.5em}
     \section{(* i18n.section.problems *)}
     \pagestyle{problems}    
     (@ for problem in volume.problems @)%
@@ -21,9 +20,11 @@
         \RenewDocumentCommand{\problemDirectory}{}{\rootDirectory/(* module.id *)/(* seminar.id *)/(* volume.id *)/(* language.id *)/(* problem.id *)}%
         \subsection{(* problem.number *)}%
         \protectedInput{\problemDirectory/problem.tex}%
+        \textcolor{red}{\texttt{(* problem.id *)}}%
     (@ endfor @)
 
     \newpage    
+    \vspace*{-1.5em}
     \section{(* i18n.section.solutions *)}
     \pagestyle{solutions}    
     (@ for problem in volume.problems @)%
@@ -32,9 +33,11 @@
         \RenewDocumentCommand{\problemDirectory}{}{\rootDirectory/(* module.id *)/(* seminar.id *)/(* volume.id *)/(* language.id *)/(* problem.id *)}%
         \subsection{(* problem.number *)}%
         \protectedInput{\problemDirectory/solution.tex}%
+        \textcolor{red}{\texttt{(* problem.id *)}}%
     (@ endfor @)
 
     \newpage
+    \vspace*{-1.5em}
     \section{(* i18n.section.answers *)}
     \pagestyle{answers}
     (@ for problem in volume.problems @)%
@@ -43,5 +46,6 @@
         \RenewDocumentCommand{\problemDirectory}{}{\rootDirectory/(* module.id *)/(* seminar.id *)/(* volume.id *)/(* language.id *)/(* problem.id *)}%
         \subsection{(* problem.number *)}%
         \protectedInput{\problemDirectory/answer.tex}%
+        \textcolor{red}{\texttt{(* problem.id *)}}%
     (@ endfor @)
 \end{document}
