--- a/modules/naboj/templates/tearoff.tex
+++ b/modules/naboj/templates/tearoff.tex
@@ -3,30 +3,57 @@
 \input{core/core.tex}
 \input{core/format.tex}
 \input{modules/(* module.id *)/styles/(* seminar.id *)/format.tex}
-\input{input/(* module.id *)/(* seminar.id *)/(* volume.id *)/(* language.id *)/format.tex}
 
 \newcounter{volume}
 \newcounter{problem}
- 
+\newcounter{team}
+
+\fancypagestyle{tearoff}{%
+    \titleformat{\subsection}[runin]{\bfseries}{}{0pt}{\setlength{\fboxsep}{3pt}\framebox[7mm]}[\setlength{\fboxsep}{0pt}]
+    \renewcommand{\headrulewidth}{0pt}
+    \renewcommand{\footrulewidth}{0pt}
+}
+
+\newgeometry{
+    left = 6mm,
+    right = 6mm,
+    bottom = 3mm,
+    top = 3mm
+}
+
 \begin{document}
-    \pagestyle{main}
-    \thispagestyle{first}
-    \vspace*{2em}
-
-    \pagestyle{problems}    
-
-    (@ for problem in volume.problems @)%
-    \setcounter{volume}{(* volume.number *)}%
-    \setcounter{problem}{(* problem.number *)}%
-    \RenewDocumentCommand{\problemDirectory}{}{\rootDirectory/(* module.id *)/(* seminar.id *)/(* volume.id *)/(* language.id *)/(* problem.id *)}%
-    
-    \subsection{%
-        \texorpdfstring{%
-            \large \textbf{(* problem.title *)}%
-        }{%
-            (* problem.title *)%
-        }%
-    }%
-    \protectedInput{\problemDirectory/problem.tex}%
+    \pagestyle{tearoff}    
+    (@ for team3 in venue.teams3 @)
+        (@ for problem in volume.problems @)
+            (@ for team in team3 @)
+                \setcounter{volume}{(* volume.number *)}%
+                \setcounter{problem}{(* problem.number *)}%
+                \setcounter{team}{(* team.id *)}%
+                \RenewDocumentCommand{\problemDirectory}{}{\rootDirectory/(* module.id *)/(* seminar.id *)/(* volume.id *)/(* team.language *)/(* problem.id *)}%
+                \begin{minipage}[t][90mm][t]{\textwidth}%
+                    \begin{minipage}[t][82mm][t]{0.875\linewidth}\vspace{0pt}%
+                        \subsection{(* problem.number *)}%
+                        \setlength{\parskip}{6pt}
+                        \protectedInput{\problemDirectory/problem.tex}%
+                    \end{minipage}%
+                    \begin{minipage}[t][82mm][t]{0.125\linewidth}\vspace{0pt}%
+                        \hspace{1mm}
+                        \rotatebox{90}{%
+                            \fontsize{30}{0}\selectfont
+                            \hspace{10mm}
+                            \textsf{(* team.id *) (* problem.number *)}
+                        }%
+                        \hspace{1mm}
+                        \rotatebox{90}{%
+                            %\includegraphics[width = 70mm, height = 15mm, page = (* 123 *)]{\rootDirectory/#1/barcodes.pdf}
+                            \includegraphics[width = 70mm, height = 15mm]{example-image-a}
+                            \hspace{5mm}
+                        }%
+                    \end{minipage}
+                    {\small (* i18n.get(team.language).team *) \textbf{(* team.id *)}: (* team.name *)}
+                \end{minipage}%
+                (@ if loop.last @)\newpage(@ else @)\\(@ endif @)
+            (@ endfor @)
+        (@ endfor @)
     (@ endfor @)
 \end{document}
