--- a/modules/naboj/format.tex
+++ b/modules/naboj/format.tex
@@ -59,7 +59,7 @@
     \fancyhead[R]{
         \begin{minipage}{0.2\textwidth}
             \flushright
-            \includegraphics[width = 30mm, keepaspectratio = true]{modules/seminar/styles/(* seminar.id *)/logo/logo.pdf}\\[0pt]
+            \includegraphics[width = 30mm, keepaspectratio = true]{modules/(* module.id *)/styles/(* seminar.id *)/logo/logo.pdf}\\[0pt]
             \vspace{4pt}
         \end{minipage}
     }
