--- a/core/format.tex
+++ b/core/format.tex
@@ -12,6 +12,7 @@
     \setlength{\belowdisplayskip}{10pt}%
     \setlength{\abovedisplayshortskip}{4pt}%
     \setlength{\belowdisplayshortskip}{4pt}%
+    \setlength{\jot}{10pt}%
 }
 \appto{\normalsize}{\setDisplaySkips}%
 \appto{\small}{\setDisplaySkips}%
