--- a/modules/naboj/templates/answers.tex
+++ b/modules/naboj/templates/answers.tex
@@ -3,7 +3,7 @@
 \input{core/core.tex}
 \input{core/format.tex}
 \input{modules/(* module.id *)/styles/(* seminar.id *)/format.tex}
-\input{input/(* module.id *)/(* seminar.id *)/(* volume.id *)/(* language.id *)/format.tex}
+\input{input/(* module.id *)/(* seminar.id *)/(* volume.id *)/languages/(* language.id *)/format.tex}
 
 \newcounter{volume}
 \newcounter{problem}
@@ -21,7 +21,7 @@
         (@ for problem in modulo @)%
             \setcounter{volume}{(* volume.number *)}%
             \setcounter{problem}{(* problem.number *)}%
-            \RenewDocumentCommand{\problemDirectory}{}{\rootDirectory/(* module.id *)/(* seminar.id *)/(* volume.id *)/(* language.id *)/(* problem.id *)}%
+            \RenewDocumentCommand{\problemDirectory}{}{\rootDirectory/(* module.id *)/(* seminar.id *)/(* volume.id *)/languages/(* language.id *)/(* problem.id *)}%
             \subsection{(* problem.number *)}%
             \protectedInput{\problemDirectory/answer.tex}%
         (@ endfor @)
