--- a/modules/naboj/templates/tearoff.tex
+++ b/modules/naboj/templates/tearoff.tex
@@ -25,7 +25,7 @@
     \pagestyle{tearoff}    
     (@ for team3 in venue.teams3 @)
         (@ for problem in volume.problems @)
-            (@ for team in team3 @)
+            (@ for team in team3 @)%
                 \setcounter{volume}{(* volume.number *)}%
                 \setcounter{problem}{(* problem.number *)}%
                 \setcounter{team}{(* team.id *)}%
@@ -41,13 +41,13 @@
                         \rotatebox{90}{%
                             \fontsize{30}{0}\selectfont
                             \hspace{10mm}
-                            \textsf{(* team.id *) (* problem.number *)}
+                            \textsf{(* '%06d'|format(team.id) *)(* '%03d'|format(problem.number) *)}
                         }%
                         \hspace{1mm}
                         \rotatebox{90}{%
-                            %\includegraphics[width = 70mm, height = 15mm, page = (* 123 *)]{\rootDirectory/#1/barcodes.pdf}
-                            \includegraphics[width = 70mm, height = 15mm]{example-image-a}
-                            \hspace{5mm}
+                            \includegraphics[%
+                                width = 70mm, height = 15mm, page = (* team.number * volume.problems|length + problem.number *)]{\rootDirectory/(* module.id *)/(* seminar.id *)/(* volume.id *)/(* venue.id *)/barcodes.pdf}%
+                            \hspace{5mm}%
                         }%
                     \end{minipage}
                     {\small (* i18n.get(team.language).team *) \textbf{(* team.id *)}: (* team.name *)}
