Náboj hut megapack again

--- a/core/core.tex
+++ b/core/core.tex
@@ -3,7 +3,7 @@
 
 % Prosíme o dodržiavanie nasledovných zásad.
 
-% NEVYMÝŠĽAJ VLASTNÉ HACKY, ŠPECIÁLNE NIE V PRÍPADE, ŽE TVOJ KÓD BUDE POUŽÍVAŤ AJ NIEKTO INÝ.
+% NEVYMÝŠĽAJ VLASTNÉ HACKY. NIKDY. NO EXCEPTIONS.
 % Aj keď je TeX miestami nechutný, zatiaľ sa všetko podarilo spraviť +- čisto.
 
 \RequirePackage[
