--- a/core/hacks.tex
+++ b/core/hacks.tex
@@ -26,4 +26,4 @@
 \makeatother
 
 % Fix Pandoc's tightlist problem
-\providecommand{\tightlist}{\setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
+\providecommand{\tightlist}{}
