--- a/modules/naboj/templates/i18n/slovak.yaml
+++ b/modules/naboj/templates/i18n/slovak.yaml
@@ -1,11 +1,15 @@
 section:
-    problems:       'Zadania'
-    solutions:      'Vzorové riešenia'
-    answers:        'Výsledky'
+    problems:           'Zadania'
+    solutions:          'Vzorové riešenia'
+    answers:            'Výsledky'
 competition:
     name:
         nominative:     'Fyzikálny Náboj'
         genitive:       'Fyzikálneho Náboja'
     email:              'info-sk@physics.naboj.org'
     website:            'https://physics.naboj.org/'
-team:               'Tím'
+    organisation:
+        full:           'Katedra teoretickej fyziky a didaktiky fyziky'
+        short:          'KTFDF'
+        address:        'Mlynská dolina, 842 48 Bratislava'
+team:                   'Tím'
