--- a/modules/seminar/format.tex
+++ b/modules/seminar/format.tex
@@ -46,7 +46,7 @@
             \vspace{4pt}
             {\Large (* seminar.full.nominative *)}\\[4pt]
             {\large (* volume.number|roman *). ročník, (* volume.number + seminar.founded - 1 *)/(* volume.number + seminar.founded *)}\\[8pt]            
-            {\footnotesize (* seminar.short *), (* seminar.departmentShort *), (* seminar.fullAddress *)}\\[2pt]
+            {\footnotesize (* seminar.short *), (* seminar.organisation.department.short *) (* seminar.organisation.faculty.short *), (* seminar.organisation.address *)}\\[2pt]
             \vspace{6pt}
         \end{minipage}        
     }           
