--- a/modules/naboj/format.tex
+++ b/modules/naboj/format.tex
@@ -12,9 +12,9 @@
     \titleformat{\section}[hang]{\centering\huge}{}{0pt}{}
     \titleformat{\subsection}[runin]{\bfseries}{}{0pt}{\setlength{\fboxsep}{3pt}\framebox[7mm]}[\setlength{\fboxsep}{0pt}]
     \titleformat{\subsubsection}[hang]{\bfseries}{}{0pt}{}[]
-    \titlespacing{\section}{0pt}{0pt}{8pt}
-    \titlespacing{\subsection}{0pt}{8pt}{8pt}
-    \titlespacing{\subsubsection}{0pt}{8pt}{0pt}
+    \titlespacing*{\section}{0pt}{0pt}{8pt}
+    \titlespacing*{\subsection}{0pt}{8pt}{8pt}
+    \titlespacing*{\subsubsection}{0pt}{8pt}{0pt}
 }
 
 \fancypagestyle{problems}{%
@@ -51,8 +51,8 @@
             \centering
             \vspace{4pt}
             {\Large (* seminar.full.nominative *)}\\[4pt]
-            {\large (* volume.number|roman *). ročník, (* volume.number + seminar.founded - 1 *)}\\[8pt]            
-            {\footnotesize (* seminar.short *), (* seminar.departmentShort *), (* seminar.fullAddress *)}\\[2pt]
+            {\large (* volume.number|roman *). ročník, (* volume.date *)}\\[8pt]            
+            {\footnotesize (* i18n.competition.organisation.short *), (* i18n.competition.organisation.short *), (* seminar.fullAddress *)}\\[2pt]
             \vspace{6pt}
         \end{minipage}        
     }           
