--- a/modules/naboj/format.tex
+++ b/modules/naboj/format.tex
@@ -4,12 +4,12 @@
 \renewcommand{\theequation}{\arabic{problem}.\arabic{equation}}
 
 \fancypagestyle{main}{
-    \fancyhead[LO,RE]{\raisebox{(* seminar.hacks.smallLogoRaise *)}{\includegraphics[keepaspectratio = true, height = 6mm]{modules/(* module.id *)/styles/(* seminar.id *)/logo/logo.pdf}}}
-    \fancyhead[C]{\textit{(* volume.number *). (* i18n.competition.name.nominative *), (* volume.number + seminar.founded - 1 *)}}
+    \fancyhead[LO,RE]{\raisebox{(* competition.hacks.smallLogoRaise *)}{\includegraphics[keepaspectratio = true, height = 6mm]{modules/(* module.id *)/styles/(* competition.id *)/logo/logo.pdf}}}
+    \fancyhead[C]{\textit{(* volume.number *). (* i18n.competition.name.nominative *), (* volume.number + competition.founded - 1 *)}}
     \fancyfoot[LO,RE]{\href{mailto:(* i18n.competition.email *)}{\texttt{(* i18n.competition.email *)}}}
     \fancyfoot[C]{\small \thepage}
     \fancyfoot[LE,RO]{\URL{(* i18n.competition.website *)}}
-    \titleformat{\section}[hang]{\centering\huge}{}{0pt}{}
+    \titleformat{\section}[hang]{\centering\huge\vspace*{-1.5ex}}{}{0pt}{}
     \titleformat{\subsection}[runin]{\bfseries}{}{0pt}{\setlength{\fboxsep}{3pt}\framebox[7mm]}[\setlength{\fboxsep}{0pt}]
     \titleformat{\subsubsection}[hang]{\bfseries}{}{0pt}{}[]
     \titlespacing*{\section}{0pt}{0pt}{8pt}
@@ -50,20 +50,20 @@
         \begin{minipage}{0.7\textwidth}
             \centering
             \vspace{4pt}
-            {\Large (* seminar.full.nominative *)}\\[4pt]
+            {\Large (* competition.full.nominative *)}\\[4pt]
             {\large (* volume.number|roman *). ročník, (* volume.date *)}\\[8pt]            
-            {\footnotesize (* i18n.competition.organisation.short *), (* i18n.competition.organisation.short *), (* seminar.fullAddress *)}\\[2pt]
+            {\footnotesize (* competition.organisation.name.short *), (* competition.organisation.short *) (* competition.organisation.faculty.short *), (* competition.organisation.address *)}\\[2pt]
             \vspace{6pt}
         \end{minipage}        
     }           
     \fancyhead[R]{
         \begin{minipage}{0.2\textwidth}
             \flushright
-            \includegraphics[width = 30mm, keepaspectratio = true]{modules/(* module.id *)/styles/(* seminar.id *)/logo/logo.pdf}\\[0pt]
+            \includegraphics[width = 30mm, keepaspectratio = true]{modules/(* module.id *)/styles/(* competition.id *)/logo/logo.pdf}\\[0pt]
             \vspace{4pt}
         \end{minipage}
     }
-    \fancyfoot[LO,RE]{\href{mailto:(* seminar.email *)}{\texttt{(* seminar.email *)}}}
+    \fancyfoot[LO,RE]{\href{mailto:(* competition.email *)}{\texttt{(* competition.email *)}}}
     \fancyfoot[C]{\small \thepage}
-    \fancyfoot[LE,RO]{\URL{(* seminar.URL *)}}
+    \fancyfoot[LE,RO]{\URL{(* competition.URL *)}}
 }  
