--- a/modules/naboj/templates/tearoff.tex
+++ b/modules/naboj/templates/tearoff.tex
@@ -2,7 +2,7 @@
 
 \input{core/core.tex}
 \input{core/format.tex}
-\input{modules/(* module.id *)/styles/(* seminar.id *)/format.tex}
+\input{modules/(* module.id *)/styles/(* competition.id *)/format.tex}
 
 \newcounter{volume}
 \newcounter{problem}
@@ -10,15 +10,16 @@
 
 \fancypagestyle{tearoff}{%
     \titleformat{\subsection}[runin]{\bfseries}{}{0pt}{\setlength{\fboxsep}{3pt}\framebox[7mm]}[\setlength{\fboxsep}{0pt}]
+    \titlespacing*{\subsection}{0pt}{0pt}{8pt}
     \renewcommand{\headrulewidth}{0pt}
     \renewcommand{\footrulewidth}{0pt}
 }
 
 \newgeometry{
-    left = 6mm,
-    right = 6mm,
+    left = 5mm,
+    right = 5mm,
     bottom = 3mm,
-    top = 3mm
+    top = 0mm
 }
 
 \begin{document}
@@ -29,14 +30,14 @@
                 \setcounter{volume}{(* volume.number *)}%
                 \setcounter{problem}{(* problem.number *)}%
                 \setcounter{team}{(* team.id *)}%
-                \RenewDocumentCommand{\problemDirectory}{}{\rootDirectory/(* module.id *)/(* seminar.id *)/(* volume.id *)/languages/(* team.language *)/(* problem.id *)}%
-                \begin{minipage}[t][90mm][t]{\textwidth}%
-                    \begin{minipage}[t][82mm][t]{0.875\linewidth}\vspace{0pt}%
+                \RenewDocumentCommand{\problemDirectory}{}{\rootDirectory/(* module.id *)/(* competition.id *)/(* volume.id *)/languages/(* team.language *)/(* problem.id *)}%
+                \begin{minipage}[t][91mm][t]{\textwidth}%
+                    \begin{minipage}[t][81mm][t]{0.875\linewidth}\vspace{0pt}%
                         \subsection{(* problem.number *)}%
                         \setlength{\parskip}{6pt}
                         \protectedInput{\problemDirectory/problem.tex}%
                     \end{minipage}%
-                    \begin{minipage}[t][82mm][t]{0.125\linewidth}\vspace{0pt}%
+                    \begin{minipage}[t][81mm][t]{0.125\linewidth}\vspace{0pt}%
                         \hspace{1mm}
                         \rotatebox{90}{%
                             \fontsize{30}{0}\selectfont
@@ -46,8 +47,8 @@
                         \hspace{1mm}
                         \rotatebox{90}{%
                             \includegraphics[%
-                                width = 70mm, height = 15mm, page = (* team.number * volume.problems|length + problem.number *)]{\rootDirectory/(* module.id *)/(* seminar.id *)/(* volume.id *)/venues/(* venue.id *)/barcodes.pdf}%
-                            \hspace{5mm}%
+                                width = 70mm, height = 15mm, page = (* team.number * volume.problems|length + problem.number *)]{\rootDirectory/(* module.id *)/(* competition.id *)/(* volume.id *)/venues/(* venue.id *)/barcodes.pdf}%
+                            \hspace{8mm}%
                         }%
                     \end{minipage}
                     {\small (* i18n.get(team.language).team *) \textbf{(* team.id *)}: (* team.name *)}
