--- a/modules/naboj/format.tex
+++ b/modules/naboj/format.tex
@@ -51,8 +51,8 @@
             \centering
             \vspace{4pt}
             {\Large (* competition.full.nominative *)}\\[4pt]
-            {\large (* volume.number|roman *). ročník, (* volume.date *)}\\[8pt]            
-            {\footnotesize (* competition.organisation.name.short *), (* competition.organisation.short *) (* competition.organisation.faculty.short *), (* competition.organisation.address *)}\\[2pt]
+            {\large (* volume.number|roman *). ročník, (* volume.date.strftime('%d. %m. %Y') *)}\\[8pt]            
+            {\footnotesize (* competition.organisation.name.short *), (* competition.organisation.department.short *) (* competition.organisation.faculty.short *), (* competition.organisation.address *)}\\[2pt]
             \vspace{6pt}
         \end{minipage}        
     }           
