--- a/core/utilities.tex
+++ b/core/utilities.tex
@@ -25,3 +25,5 @@
     \raisebox{-2.8pt}[0pt][0.75\baselineskip]{\small\ding{34}}%
     \unskip{\tiny\dotfill}
 }
+
+\RenewDocumentCommand{\vec}{m}{\vv{#1}}
