--- a/core/hacks.tex
+++ b/core/hacks.tex
@@ -1,19 +1,6 @@
 \makeatletter
 
-% Fixes mathspec bug -- URL numbers are rendered with wrong font
-    \DeclareMathSymbol{0}{\mathalpha}{\eu@DigitsArabic@symfont}{`0}
-    \DeclareMathSymbol{1}{\mathalpha}{\eu@DigitsArabic@symfont}{`1}
-    \DeclareMathSymbol{2}{\mathalpha}{\eu@DigitsArabic@symfont}{`2}
-    \DeclareMathSymbol{3}{\mathalpha}{\eu@DigitsArabic@symfont}{`3}
-    \DeclareMathSymbol{4}{\mathalpha}{\eu@DigitsArabic@symfont}{`4}
-    \DeclareMathSymbol{5}{\mathalpha}{\eu@DigitsArabic@symfont}{`5}
-    \DeclareMathSymbol{6}{\mathalpha}{\eu@DigitsArabic@symfont}{`6}
-    \DeclareMathSymbol{7}{\mathalpha}{\eu@DigitsArabic@symfont}{`7}
-    \DeclareMathSymbol{8}{\mathalpha}{\eu@DigitsArabic@symfont}{`8}
-    \DeclareMathSymbol{9}{\mathalpha}{\eu@DigitsArabic@symfont}{`9}
-
-% Disgusting hacks to bypass idiotic limitations of LaTeX -- 16 alphabets per document
-
+% Change allocator to allow more than 16 alphabets per document
     \def\new@mathgroup{\alloc@8\mathgroup\mathchardef\@cclvi}
     \patchcmd{\document@select@group}{\sixt@@n}{\@cclvi}{}{}
     \patchcmd{\select@group}{\sixt@@n}{\@cclvi}{}{}
