Created a template for semester-booklet, reworked metadata loading

--- a/core/core.tex
+++ b/core/core.tex
@@ -36,6 +36,7 @@
 \RequirePackage{color}
 \RequirePackage{float}
 \RequirePackage{caption}
+\RequirePackage{skull}
 \RequirePackage{booktabs}
 \RequirePackage{titlesec}
 \RequirePackage{afterpage}
