--- a/modules/seminar/styles/FKS/templates/rules.tex
+++ b/modules/seminar/styles/FKS/templates/rules.tex
@@ -38,7 +38,7 @@
     
         \item[$\skull$] Príklady posielaj načas! Dôležitý je \emph{termín odoslania} riešení (ak posielaš poštou, tak rozhoduje pečiatka odoslania).
             Za jeden deň po termíne ti strhneme 25\% tvojich získaných bodov zaokrúhlených nadol. 
-            Riešenia odovzdané neskôr už neakceptujeme. Ak kvôli nejakému závažnému dôvodu nestíhaš odoslať riešenia načas, neváhaj nás kontaktovať na \URL{\seminarEmail}
+            Riešenia odovzdané neskôr už neakceptujeme. Ak kvôli nejakému závažnému dôvodu nestíhaš odoslať riešenia načas, neváhaj nás kontaktovať na \URL{(* competition.email *)}
             a vyriešime to individuálne.
     \end{itemize}
 
@@ -76,11 +76,11 @@
     priamo nebudú strhnuté body, budeme vás ohovárať na priedomku.
 
     Ak nepochopíš úplne presne zadanie príkladu, môžeš sa nás na podrobnosti opýtať
-    e-mailom na {\URL{\seminarEmail}}. Ak by bola v~príklade nejaká vážnejšia
+    e-mailom na \URL{(* competition.email *)}. Ak by bola v~príklade nejaká vážnejšia
     nejasnosť, nedajbože chyba v~zadaní, určite Ťa na to mailom upozorníme a taktiež to uverejníme na stránke.
 
 \subsection{Chcem začať riešiť! Čo mám spraviť?}
-    Zaregistruj sa na \URL{\seminarURL} a~začni čo najskôr počítať. Nečakaj však, že všetko stihneš porátať
+    Zaregistruj sa na \URL{(* competition.url *)} a~začni čo najskôr počítať. Nečakaj však, že všetko stihneš porátať
     za posledný víkend či hodinu slovenčiny v~deň termínu odoslania série :-)
 
     \textbf{Zaregistruj sa, aj keď si už FKS riešil, alebo budeš posielať riešenia poštou.}
