--- a/core/utilities.tex
+++ b/core/utilities.tex
@@ -16,7 +16,7 @@
     \IfFileExists{#1}{%
         \input{#1}%
     }{%
-        \errorMessage{MISSING FILE \texttt{#1}!}\\%
+        \errorMessage{MISSING FILE \texttt{#1}!}\\
     }%
 }
 
