--- a/modules/seminar/format.tex
+++ b/modules/seminar/format.tex
@@ -1,17 +1,17 @@
-% DeGeŠ seminar style file
+% DeGeŠ competition style file
 
 \fancypagestyle{main}{
-    \fancyhead[LO,RE]{\raisebox{(* seminar.hacks.smallLogoRaise *)}{\includegraphics[keepaspectratio = true, height = 6mm]{modules/seminar/styles/(* seminar.id *)/logo/logo.pdf}}}
-    \fancyhead[LE,RO]{(* seminar.full.nominative *)}
-    \fancyfoot[LO,RE]{\href{mailto:(* seminar.email *)}{\texttt{(* seminar.email *)}}}
+    \fancyhead[LO,RE]{\raisebox{(* competition.hacks.smallLogoRaise *)}{\includegraphics[keepaspectratio = true, height = 6mm]{modules/seminar/styles/(* competition.id *)/logo/logo.pdf}}}
+    \fancyhead[LE,RO]{(* competition.full.nominative *)}
+    \fancyfoot[LO,RE]{\href{mailto:(* competition.email *)}{\texttt{(* competition.email *)}}}
     \fancyfoot[C]{\small \thepage}
-    \fancyfoot[LE,RO]{\URL{(* seminar.URL *)}}
+    \fancyfoot[LE,RO]{\URL{(* competition.URL *)}}
     \titleformat{\section}[hang]{\centering\LARGE}{}{0pt}{}
-    \titleformat{\subsection}[hang]{\bfseries\large}{}{0pt}{\quad}[]
+    \titleformat{\subsection}[hang]{\bfseries\large}{}{0pt}{}[]
     \titleformat{\subsubsection}[hang]{\bfseries}{}{0pt}{}[]
-    \titlespacing{\section}{0pt}{8pt}{8pt}
-    \titlespacing{\subsection}{0pt}{8pt}{0pt}
-    \titlespacing{\subsubsection}{0pt}{8pt}{0pt}
+    \titlespacing*{\section}{0pt}{8pt}{8pt}
+    \titlespacing*{\subsection}{0pt}{8pt}{0pt}
+    \titlespacing*{\subsubsection}{0pt}{8pt}{0pt}
 }
 
 \fancypagestyle{problems}{%
@@ -44,20 +44,20 @@
         \begin{minipage}{0.7\textwidth}
             \centering
             \vspace{4pt}
-            {\Large (* seminar.full.nominative *)}\\[4pt]
-            {\large (* volume.number|roman *). ročník, (* volume.number + seminar.founded - 1 *)/(* volume.number + seminar.founded *)}\\[8pt]            
-            {\footnotesize (* seminar.short *), (* seminar.organisation.department.short *) (* seminar.organisation.faculty.short *), (* seminar.organisation.address *)}\\[2pt]
+            {\Large (* competition.full.nominative *)}\\[4pt]
+            {\large (* volume.number|roman *). ročník, (* volume.number + competition.founded - 1 *)/(* volume.number + competition.founded *)}\\[8pt]            
+            {\footnotesize (* competition.short *), (* competition.organisation.department.short *) (* competition.organisation.faculty.short *), (* competition.organisation.address *)}\\[2pt]
             \vspace{6pt}
         \end{minipage}        
     }           
     \fancyhead[R]{
         \begin{minipage}{0.2\textwidth}
             \flushright
-            \includegraphics[width = 30mm, keepaspectratio = true]{modules/seminar/styles/(* seminar.id *)/logo/logo.pdf}\\[0pt]
+            \includegraphics[width = 30mm, keepaspectratio = true]{modules/seminar/styles/(* competition.id *)/logo/logo.pdf}\\[0pt]
             \vspace{4pt}
         \end{minipage}
     }
-    \fancyfoot[LO,RE]{\href{mailto:(* seminar.email *)}{\texttt{(* seminar.email *)}}}
+    \fancyfoot[LO,RE]{\href{mailto:(* competition.email *)}{\texttt{(* competition.email *)}}}
     \fancyfoot[C]{\small \thepage}
-    \fancyfoot[LE,RO]{\URL{(* seminar.URL *)}}
+    \fancyfoot[LE,RO]{\URL{(* competition.URL *)}}
 }  
