--- a/modules/seminar/styles/UFO/templates/rules.tex
+++ b/modules/seminar/styles/UFO/templates/rules.tex
@@ -2,50 +2,47 @@
 
 \section{Pravidlá a postihy}
 \begin{itemize}
-	\item Seminár je určený pre siedmakov, ôsmakov, deviatakov základných škôl a~sekundánov, terciánov a~kvartánov osemročných gymnázií. 
+    \item Seminár je určený pre siedmakov, ôsmakov, deviatakov základných škôl a~sekundánov, terciánov a~kvartánov osemročných gymnázií. 
 
-	\item Cez jeden polrok má seminár 3~série. Všetky série majú po 5~príkladov (každý za 9~bodov), za každú sériu tak môžeš získať 45 bodov.
+    \item Cez jeden polrok má seminár \textbf{3}~kolá. Všetky kolá majú po 5~príkladov (každý za 9~bodov), za každú sériu tak môžeš získať 45 bodov.
 
-	\item Siedmaci (sekundáni) a~ôsmaci (terciáni) sú zvýhodnení \emph{bodovou prémiou} (kolonka bonus vo výsledkovej listine)\footnote{%
-		Prémia má výšku $\num{0.015} \cdot D \cdot (M - D)$ bodov pre siedmakov a $\num{0.008} \cdot D \cdot (M - D)$ bodov pre ôsmakov,
-		kde $D$ je dosiahnutý počet bodov a $M$ je maximálny možný počet bodov v~sérii.}.
+    \item Siedmaci (sekundáni) a~ôsmaci (terciáni) sú zvýhodnení \emph{bodovou prémiou} (kolonka bonus vo výsledkovej
+        listine)\footnote{Prémia má výšku $\num{0.015} \cdot D \cdot (M - D)$ bodov pre siedmakov a $\num{0.008} \cdot D \cdot (M - D)$ bodov pre ôsmakov,
+        kde $D$ je dosiahnutý počet bodov a $M$ je maximálny možný počet bodov v~kole.}.
 
-	\item Riešenia môžeš posielať poštou alebo elektronicky. Ak posielaš riešenia poštou, pridrž sa nasledujúcich pravidiel:
-		\begin{itemize}
-			\item každý príklad píš na \emph{osobitný papier A4}, viacstranové riešenie zopni spinkou,
-			\item na každý papier napíš hore \emph{hlavičku} s~menom, triedou, školou a~číslom príkladu,
-			\item ak riešiš prvýkrát, pošli aj vyplnenú návratku (nájdeš ju na ďalšej strane).
-		\end{itemize}
-	Viac informácií k~elektronickým riešeniam nájdeš na stránke \URL{\seminarURL} v sekcii e-riešenia.
+    \item Riešenia môžeš posielať iba elektronicky. Ak však stále uprednostňuješ písanie riešenia na papier,
+        môžeš svoje riešenie oskenovať a~uložiť každú takto naskenovanú úlohu do jedného \emph{samostatného} \texttt{pdf} súboru.
+        Viac informácií k~riešeniam nájdeš na stránke \URL{http://ufo.fks.sk/pravidla}.
 
-	\item[$\skull$] Úlohy rieš samostatne! Za odpisovanie strhávame body a~sme agresívni. 
+    \item[$\skull$] Úlohy rieš samostatne! Za odpisovanie strhávame body a~sme agresívni. 
 
-	\item[$\skull$] Príklady posielaj načas! Rozhoduje \emph{termín odoslania} riešení. Riešenia ti zoberieme aj deň po termíne, ale započítaných ti bude len \SI{75}{\percent} získaných bodov.
-		Výnimočné prípady riešime individuálne.
+    \item[$\skull$] Príklady posielaj načas! Rozhoduje \emph{termín odoslania} riešení. Riešenia ti zoberieme
+        aj deň po termíne, ale započítaných ti bude len \SI{75}{\percent} získaných bodov. Výnimočné prípady riešime individuálne.
 \end{itemize}
 
 \subsection{Ako získavať veľa bodov?}
-	Ako v~mnohých iných súťažiach, aj tu platí jednoduchá zásada -- písať všetko, čo o~príklade vieš. Teda, aj keď nevieš celé riešenie, oplatí sa písať časti
-    riešenia, názory, postrehy, pokusy. Keď chceš vidieť, ako má vyzerať riešenie, prečítaj si \URL{\seminarURL ako\_riesit}. 
+    Ako v~mnohých iných súťažiach, aj tu platí jednoduchá zásada -- písať všetko, čo o~príklade vieš. Teda, aj keď nevieš celé riešenie, oplatí sa písať časti
+    riešenia, názory, postrehy, pokusy. Keď chceš vidieť, ako má vyzerať riešenie, prečítaj si \URL{http://ufo.fks.sk/ako\_riesit}. 
 
-	Nemaj strach poslať iba niekoľko úloh. Iba málokto vypočíta všetky úlohy a~dobre umiestniť sa dá aj s~bodmi za menej úloh.
+    Nemaj strach poslať iba niekoľko úloh. Iba málokto vypočíta všetky úlohy a~dobre umiestniť sa dá aj s~bodmi za menej úloh.
 
-	Píš čitateľne a~tvoje riešenia budú opravené. Píš nečitateľne a~tvoje riešenia budú tiež opravené. Ale predsa by si nás nechcel týrať.
+    Ak píšeš riešenia na papier, píš čitateľne a~tvoje riešenia budú opravené. Píš nečitateľne a~tvoje riešenia budú tiež opravené. Ale predsa by si nás nechcel týrať.
 
-	Ak sa ti nepáči, ako bol príklad obodovaný, pripíš naň rozumný argument, prečo si myslíš že je hodný viac bodov a~pošli späť. Opravovateľ sa zamyslí a~možno aj preboduje.
+    Ak sa ti nepáči, ako bol príklad obodovaný, pripíš naň rozumný argument, prečo si myslíš, že je hodný viac bodov a~pošli späť. Opravovateľ sa zamyslí a~možno aj preboduje.
 
-	Pokiaľ nepochopíš presne zadanie príkladu, môžeš sa e-mailom pýtať na podrobnosti. Pokiaľ máš prístup k~internetu, oplatí sa tiež sledovať debatu zverejnenú na našej stránke (\URL{\seminarURL}).
-	Pokiaľ by bola v~príklade nejaká vážnejšia nejasnosť, nebodaj chyba v~zadaní, na debate sa zjaví opravené zadanie príkladu.
+    Pokiaľ nepochopíš presne zadanie príkladu, môžeš sa e-mailom pýtať na podrobnosti. Pokiaľ máš účet na Facebooku, oplatí sa byť v skupine
+    \href{https://www.facebook.com/groups/fks.ufo/}{FKS \& UFO -- Fyzikálne korešpondenčné semináre}.
+    Pokiaľ by bola v~príklade nejaká vážnejšia nejasnosť, nebodaj chyba v~zadaní, v novinkách na to upozorníme.
 
-	A~hlavne, nenechávaj si príklady na poslednú chvíľu. Skúsenosti potvrdzujú, že za menej ako posledné dve chvíle sa UFO vyriešiť nedá.
+    A~hlavne, nenechávaj si príklady na poslednú chvíľu. Skúsenosti potvrdzujú, že za menej ako posledné dve chvíle sa UFO vyriešiť nedá.
 
-\subsection{Riešiť UFO?}
-	\begin{itemize}
-		\item[+] Spoznáš skvelých ľudí.
-		\item[+] Naberieš dačo do hlavy.
-		\item[+] Dostaneš sa na sústredko.
-		\item[+] Časom môžeš plynule prejsť na stredoškolské kategórie nášho seminára.
+\subsection{Prečo riešiť UFO?}
+    \begin{itemize}
+        \item[+] Spoznáš skvelých ľudí.
+        \item[+] Naberieš dačo do hlavy.
+        \item[+] Dostaneš sa na sústredko.
+        \item[+] Časom môžeš plynule prejsť na stredoškolské kategórie nášho seminára.
 
-		\item[--] Po sústredku ti bude smutno, že bolo také krátke.
-		\item[--] Nebudeš môcť spávať od nedočkavosti, kedy ti príde opravená séria.
-	\end{itemize}
+        \item[--] Po sústredku ti bude smutno, že bolo také krátke.
+        \item[--] Nebudeš môcť spávať od nedočkavosti, kedy ti prídu opravené riešenia.
+    \end{itemize}
