Toyed with spacing with dubious results, but it works

--- a/modules/seminar/format.tex
+++ b/modules/seminar/format.tex
@@ -9,9 +9,9 @@
     \titleformat{\section}[hang]{\centering\LARGE}{}{0pt}{}
     \titleformat{\subsection}[hang]{\bfseries\large}{}{0pt}{}[]
     \titleformat{\subsubsection}[hang]{\bfseries}{}{0pt}{}[]
-    \titlespacing*{\section}{0pt}{8pt}{8pt}
-    \titlespacing*{\subsection}{0pt}{8pt}{0pt}
-    \titlespacing*{\subsubsection}{0pt}{8pt}{0pt}
+    \titlespacing{\section}{0pt}{8pt}{8pt}
+    \titlespacing{\subsection}{0pt}{8pt}{0pt}
+    \titlespacing{\subsubsection}{0pt}{8pt}{0pt}
 }
 
 \fancypagestyle{problems}{%
