--- a/modules/seminar/styles/UFO/templates/rules.tex
+++ b/modules/seminar/styles/UFO/templates/rules.tex
@@ -4,19 +4,19 @@
 \begin{itemize}
     \item Seminár je určený pre siedmakov, ôsmakov, deviatakov základných škôl a~sekundánov, terciánov a~kvartánov osemročných gymnázií. 
 
-    \item Cez jeden polrok má seminár \textbf{3}~kolá. Všetky kolá majú po 5~príkladov (každý za 9~bodov), za každú sériu tak môžeš získať 45 bodov.
+    \item Počas jedného polroka má seminár \textbf{tri}~kolá. Všetky kolá majú po 5~príkladov (každý za 9~bodov), za každú sériu tak môžeš získať 45 bodov.
 
-    \item Siedmaci (sekundáni) a~ôsmaci (terciáni) sú zvýhodnení \emph{bodovou prémiou} (kolonka bonus vo výsledkovej
+    \item Siedmaci (sekundáni) a~ôsmaci (terciáni) sú zvýhodnení \textbf{bodovou prémiou} (kolonka bonus vo výsledkovej
         listine)\footnote{Prémia má výšku $\num{0.015} \cdot D \cdot (M - D)$ bodov pre siedmakov a $\num{0.008} \cdot D \cdot (M - D)$ bodov pre ôsmakov,
         kde $D$ je dosiahnutý počet bodov a $M$ je maximálny možný počet bodov v~kole.}.
 
     \item Riešenia môžeš posielať iba elektronicky. Ak však stále uprednostňuješ písanie riešenia na papier,
-        môžeš svoje riešenie oskenovať a~uložiť každú takto naskenovanú úlohu do jedného \emph{samostatného} \texttt{pdf} súboru.
+        môžeš svoje riešenie oskenovať a~uložiť každú takto naskenovanú úlohu do jedného \textbf{samostatného} \texttt{pdf} súboru.
         Viac informácií k~riešeniam nájdeš na stránke \URL{http://ufo.fks.sk/pravidla}.
 
     \item[$\skull$] Úlohy rieš samostatne! Za odpisovanie strhávame body a~sme agresívni. 
 
-    \item[$\skull$] Príklady posielaj načas! Rozhoduje \emph{termín odoslania} riešení. Riešenia ti zoberieme
+    \item[$\skull$] Príklady posielaj načas! Rozhoduje \textbf{termín odoslania} riešení. Riešenia ti zoberieme
         aj deň po termíne, ale započítaných ti bude len \SI{75}{\percent} získaných bodov. Výnimočné prípady riešime individuálne.
 \end{itemize}
 
