--- a/modules/seminar/templates/problems.tex
+++ b/modules/seminar/templates/problems.tex
@@ -13,12 +13,12 @@
 \begin{document}
     \pagestyle{main}
     \thispagestyle{first}
-    \vspace*{2em}
+    \vspace*{8mm}
 
     {
         \section{\texorpdfstring{Zadania (* round.id *). kola (* semester.genitive *) časti}{Zadania}}
         \centering
-        \vspace{-1.3em}
+        \vspace*{-5mm}
         Termín odoslania (* round.deadline.strftime('%d. %m. %Y') *)\\[2pt]
     } 
         
