--- a/modules/seminar/templates/semester.tex
+++ b/modules/seminar/templates/semester.tex
@@ -13,7 +13,7 @@
 \begin{document}
     \pagestyle{main}
     \thispagestyle{first}
-    \vspace*{4em}
+    \vspace*{15mm}
     \input{modules/(* module.id *)/styles/(* competition.id *)/templates/intro.tex}
     \newpage
     \input{modules/(* module.id *)/styles/(* competition.id *)/templates/rules.tex}
@@ -25,7 +25,7 @@
         {
             \section{Zadania (* round.number *). kola}
             \centering
-            \vspace{-1.3em}
+            \vspace*{-5mm}
             Termín odoslania (* round.deadline.strftime('%d. %m. %Y') *)\\[2pt]
         } 
 
